DAOS-4201 test: Functional testing with mpich should load mpich module
Skip-checkpatch: true
Quick-build: true
RPM-test: true
noRPM-test-version: 1.1.0-23.4627.g645a066b
noPR-repos: daos@PR-2060:233
noPR-Repos: lua-lmod@PR-1
Skip-run_test: true
Skip-coverity-test: true
Signed-off-by: Brian J. Murrell <brian.murrell@intel.com>

--- a/utils/rpms/Makefile
+++ b/utils/rpms/Makefile
@@ -6,6 +6,7 @@ SOURCE   = $(NAME)-$(VERSION).tar.$(SRC_EXT)
 MOCK_OPTIONS := --disablerepo=sclo*
 
 PR_REPOS := $(shell set -x; git show -s --format=%B | sed -ne 's/^PR-repos: *\(.*\)/\1/p')
+override LEAP_15_PR_REPOS += lua-lmod@PR-1
 
 GIT_SHORT       := $(shell git rev-parse --short HEAD)
 GIT_NUM_COMMITS := $(shell git rev-list HEAD --count)
