DAOS-623 build: Remove some build options, use consistent build style
Remove TARGET_PREFIX, PREBUILT_PREFIX, and [component]_PREBUILT options
Add TARGET_TYPE option
Remove --build-type option, use BUILD_TYPE for both prerequisites and daos

This patch makes a fundamental change to the build but always building
prerequisites in $PREFIX/prereq/$TARGET_TYPE/[component] making
TARGET_PREFIX style build the default for developer local builds.

This enables automatic switching as TARGET_TYPE default is BUILD_TYPE
so if user does a debug build, they will get debug prerequisites by
default unless they set TARGET_TYPE to something stable.

Also makes some adjustments to rpath to include origin based rpath in
libraries and tools

Update documentation accordingly

Signed-off-by: Jeff Olivier <jeffrey.v.olivier@intel.com>

--- a/src/control/SConscript
+++ b/src/control/SConscript
@@ -3,6 +3,7 @@
 #pylint: disable=too-many-locals
 import sys
 import os
+import daos_build
 from os.path import join, isdir
 from os import urandom
 from binascii import b2a_hex
@@ -163,6 +164,8 @@ def scons():
     cartpath = Dir('#/src/cart/src/include').srcnode().abspath
 
     prereqs.require(denv, 'ofi', 'hwloc')
+
+    daos_build.add_rpaths(denv, "..")
 
     denv.AppendENVPath("CGO_LDFLAGS",
                        denv.subst("$_LIBDIRFLAGS "
