--- a/src/tests/SConscript
+++ b/src/tests/SConscript
@@ -11,14 +11,14 @@ def scons():
     denv = env.Clone()
 
     if not GetOption('help') and not GetOption('clean'):
-        mpi = daos_build.configure_mpi(prereqs, denv, libs)
+        mpi = daos_build.configure_mpi(denv, libs)
         if mpi is None:
             print("\nSkipping compilation for tests that need MPI")
             print("Install and load mpich or openmpi\n")
             return
 
     # Add runtime paths for daos libraries
-    denv.AppendUnique(RPATH=[Literal(r'\$$ORIGIN/../lib64/daos_srv')])
+    denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64/daos_srv'])
 
     denv.Append(CPPPATH=[Dir('suite').srcnode()])
     prereqs.require(denv, 'argobots', 'hwloc', 'protobufc')
